try breaking config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
   downstream:
     <<: *defaults
     steps:
+#     - comment here    
       - attach_workspace:
           # Must be absolute path or relative path from working_directory
           at: /tmp/workspace
