--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ workflows:
   btd:
     jobs:
       - flow
+        filters:
+          tags:
+            ignore: /^testing-.*/      
       - downstream:
           requires:
             - flow
